--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>hi this is my first line</h1>
     <h2>this is my second line</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, explicabo?</p>
 </body>
 </html>
