--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <h1>hi this is my first line</h1>
     <h2>this is my second line</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, explicabo?</p>
-</body>
+<h1>hi this is</h1>
 </html>
